[package]
name = "rust-api"
version = "0.1.0"
authors = ["echnobas"]
edition = "2018"
license = "LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8"
mongodb = "1.1.1"
bson = "1.1.0"
serde = { version = "1.0.123", features = ["derive"] }